<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:fitsSystemWindows="false"
    tools:context="com.drift.camcontroldemo.LinkLiveActivity">

    <RelativeLayout
        android:id="@+id/rl_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="12dp"
            android:src="@drawable/ic_back_white"
            android:contentDescription="@string/no_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/link_live"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_H1_18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_nav"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_live_url_value"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:hint="@string/link_input_live_url"
            android:textColor="@android:color/white"
            android:textColorHint="#86909C" />

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="#86909C" />

    </LinearLayout>

    <TextView
        android:id="@+id/rl_confirm"
        style="@style/ButtonLg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_input"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:text="@string/confirm" />

</RelativeLayout>