<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_link_add_camera_bg"
    tools:context="com.foream.activity.LinkAddCameraActivity">

    <!-- 顶部导航栏 -->
    <RelativeLayout
        android:id="@+id/rl_nav"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp">

        <ImageView
            style="@style/BackButton"
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Link_add_camera"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- 输入区域 -->
    <LinearLayout
        android:id="@+id/rl_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_nav"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/et_wifi_name"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:hint="@string/Link_wifi_name"
            android:textColor="@android:color/white"
            android:textColorHint="#86909C" />

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="#86909C" />

        <EditText
            android:id="@+id/et_wifi_password"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:hint="@string/Link_wifi_password"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="#86909C" />

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="#86909C" />
    </LinearLayout>

    <!-- 二维码区域 -->
    <ImageView
        android:id="@+id/iv_qrcode_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_input"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <!-- 提示和说明区域 - 可滚动 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rl_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_qrcode_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tips_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:text="@string/Link_add_camera_tip_title"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:text="@string/Link_add_camera_tips"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:text="@string/Link_add_camera_note_title"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/Link_add_camera_notes"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <!-- 确认按钮 -->
    <RelativeLayout
        android:id="@+id/rl_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/link_confirm_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>