<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rect_black_trans197_rad8"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_comment"
            android:src="@drawable/p_icon_warning" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/no_comment"
        android:src="@color/white_trans40" />

    <LinearLayout
        android:id="@+id/ll_two_buttons_bg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_left_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/sl_bg_trans0_and_white_trans20" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:id="@+id/tv_left_btn"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:contentDescription="@string/no_comment"
            android:src="@color/white_trans40" />

        <RelativeLayout
            android:id="@+id/rl_right_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/sl_bg_trans0_and_white_trans20" >

            <TextView
                android:id="@+id/tv_right_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_one_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/sl_bg_trans0_and_white_trans20"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>