<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_model"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@drawable/link_cam_list_cell_bg">

        <RelativeLayout
            android:id="@+id/rl_bat"
            android:layout_width="60dp"
            android:layout_marginLeft="19dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_bat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Link_Battery"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="@color/color_link_red"
                android:gravity="center"
                android:text=""
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_bat_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:text="40%"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_memory"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/ib_takephoto"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:id="@+id/tv_memory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Link_Memory"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="@color/color_link_red"
                android:gravity="center"
                android:text=""
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_mem_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:text="40%"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_res"
            android:layout_width="55dp"
            android:layout_toRightOf="@id/ib_takephoto"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Link_Res"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="@color/color_link_red"
                android:gravity="center"
                android:text=""
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_res_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:text="4KUHD@30"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ip"
            android:layout_width="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="19dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Link_IP"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="@color/color_link_red"
                android:gravity="center"
                android:text=""
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_ip_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:text="192.168.1.3"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/ib_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00000000"
            app:srcCompat="@drawable/link_cam_offline"
            tools:ignore="SpeakableTextPresentCheck" />

        <RelativeLayout
            android:id="@+id/rl_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="@drawable/link_cam_list_cell_bg">

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>